--- a/RBioSNPAS/DESCRIPTION
+++ b/RBioSNPAS/DESCRIPTION
@@ -1,11 +1,19 @@
 Package: RBioSNPAS
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: An R package for variant calling QC-downstream analysis and association studies. It is part of the RBio software suite. 
+Version: 0.0.1
+Author: Jing Zhang
+Maintainer: Jing Zhang <jzhangcad@gmail.com>
+Description: For variant calling, this package works with the data from the GATK variante calling suite. The goal is VCF QC plotting and downtream analysis. This package also handles association studies, such as GWAS. 
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Imports:
+    ggplot2 (>= 3.0.0), limma (>= 3.40.6),
+    reshape2 (>= 1.4.1),
+    gtable (>= 0.2.0), grid (>= 3.2.4),
+    gplots (>= 3.0.1), limma (>= 3.28.21), edgeR (>= 3.14.0), parallel (>= 3.3.2),
+    shiny (>= 1.0.5), doParallel (>= 1.0.11), foreach (>= 1.4.3), matrixStats (>= 0.53.1), GGally (>= 1.3.2),
+    RBioplot (>= 0.5.2), pROC (>= 1.12.1)
+Remotes: jzhangc/git_R_STATS_KBS/package/rbioplot
+RoxygenNote: 7.1.1
