--- a/RBioSNPAS/DESCRIPTION
+++ b/RBioSNPAS/DESCRIPTION
@@ -14,6 +14,6 @@ Imports:
     gtable (>= 0.2.0), grid (>= 3.2.4),
     gplots (>= 3.0.1), limma (>= 3.28.21), edgeR (>= 3.14.0), parallel (>= 3.3.2),
     shiny (>= 1.0.5), doParallel (>= 1.0.11), foreach (>= 1.4.3), matrixStats (>= 0.53.1), GGally (>= 1.3.2),
-    RBioplot (>= 0.5.2), pROC (>= 1.12.1)
+    RBioplot (>= 0.5.2), pROC (>= 1.12.1), vcfR (>= 1.12.0)
 Remotes: jzhangc/git_R_STATS_KBS/package/rbioplot
 RoxygenNote: 7.1.1
